<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_my_feed"
            android:icon="@drawable/ic_menu_dynamic_feed"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_leaderboards"
            android:icon="@drawable/ic_menu_bar_chart"
            android:title="@string/menu_leaderboards" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_profile" />
       <!-- <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" /> -->
        <item
            android:id="@+id/nav_make_post"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_post" />
        <item
             android:id="@+id/nav_mod_tools"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/menu_tools" />
    </group>

</menu>

