<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gopherpost.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.gopherpost.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_my_feed"
        android:name="com.example.gopherpost.ui.my_feed.MyFeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_my_feed" />

    <fragment
        android:id="@+id/nav_leaderboards"
        android:name="com.example.gopherpost.ui.leaderboards.LeaderboardsFragment"
        android:label="@string/menu_leaderboards"
        tools:layout="@layout/fragment_leaderboards" />


    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.example.gopherpost.ui.my_profile.MyProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_my_profile" />

   <!-- <fragment
        android:id="@+id/nav_help"
        android:name="com.example.gopherpost.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" /> -->

    <fragment
        android:id="@+id/nav_make_post"
        android:name="com.example.gopherpost.ui.make_post.MakePostFragment"
        android:label="@string/menu_post"
        tools:layout="@layout/fragment_make_post" />

    <fragment
        android:id="@+id/nav_mod_tools"
        android:name="com.example.gopherpost.ui.mod_tools.ModToolFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_mod_tools" />


</navigation>