<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_in_frag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:layout_marginTop="104dp"
            android:background="#008B3131"
            android:contentDescription="@string/menu_title"
            android:text="@string/menu_title"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:gravity="center"
            android:ems="10"
            android:hint="@string/menu_user_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password_bar"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="127dp"
            android:layout_height="77dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/menu_sign_in" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>