<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="635dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="#ffffff">

                <ImageView
                    android:id="@+id/event_image"
                    android:layout_width="196dp"
                    android:layout_height="249dp"
                    android:contentDescription="event image"
                    app:srcCompat="@drawable/study"/>

                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/event_title_label"
                    android:gravity="center"
                    android:text="Study\nTime:09:00\nMonday"
                    android:textSize="40sp"/>

                <TextView
                    android:id="@+id/event_group"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:contentDescription="group putting event on"
                    android:gravity="center"
                    android:text="CSCI9999"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:gravity="center|fill"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/event_favorite_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/event_favorite_button" />

                    <Button
                        android:id="@+id/event_rsvp_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/event_rsvp_button" />

                </LinearLayout>

                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="time" />

                <TextView
                    android:id="@+id/event_location"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:ems="10"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_description_label" />

                <TextView
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>