<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/event_image"
                android:layout_width="0dp"
                android:layout_height="190dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="event image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/game"
                tools:layout_conversion_absoluteHeight="249dp"
                tools:layout_conversion_absoluteWidth="196dp" />

            <TextView
                android:id="@+id/event_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="44dp"
                android:contentDescription="@string/event_title_label"
                android:gravity="center"
                android:text="Game\nTime:20:00\nWednesday"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_image"
                tools:layout_conversion_absoluteHeight="166dp"
                tools:layout_conversion_absoluteWidth="411dp" />


            <TextView
                android:id="@+id/event_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:contentDescription="group putting event on"
                android:gravity="center"
                android:text="Pro Gamer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_title"
                tools:layout_conversion_absoluteHeight="60dp"
                tools:layout_conversion_absoluteWidth="411dp" />

            <Button
                android:id="@+id/event_favorite_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/event_favorite_button"
                app:layout_constraintEnd_toStartOf="@+id/event_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_group"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="206dp" />


            <Button
                android:id="@+id/event_rsvp_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/event_rsvp_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/event_group"
                app:layout_constraintTop_toBottomOf="@+id/event_group"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="205dp" />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_favorite_button"
                tools:layout_conversion_absoluteHeight="32dp"
                tools:layout_conversion_absoluteWidth="411dp" />

            <TextView
                android:id="@+id/event_location"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_date"
                tools:layout_conversion_absoluteHeight="32dp"
                tools:layout_conversion_absoluteWidth="411dp" />

            <TextView
                android:id="@+id/event_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/event_description_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_location"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="411dp" />

            <Button
                android:id="@+id/btnDenyMod"
                android:layout_width="161dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="Don't Accept"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_description" />

            <Button
                android:id="@+id/btnAcceptMod"
                android:layout_width="161dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="Accept"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_description"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>